# docai_backend

./: .gitignore  README.md  pyproject.toml
docai_backend/: app.py
docai_backend/contracts/: project_dto.py  section_dto.py  user_dto.py
docai_backend/controllers/: auth_controller.py  project_controller.py  refinement_controller.py  section_controller.py
docai_backend/llm/: context_builder.py  llm_service.py  prompt_builder.py  providers.py
docai_backend/middleware/: protected.py
docai_backend/models/: comment_model.py  project_model.py  refinement_model.py  section_model.py  user_model.py
docai_backend/repositories/: comment_repository.py  project_repository.py  refinement_repository.py  section_repository.py  user_repository.py
docai_backend/schemas/: auth_schema.py  project_schema.py  section_schema.py
docai_backend/services/: auth_service.py  llm_service.py  project_service.py  refinement_service.py  section_service.py
docai_backend/utils/: error_handler.py  exception.py  export.py  factory.py  jwt.py  response.py
migrations/versions/: 2190db7f62f5_.py  2be8f95fc08c_.py  bb17aa488bf8_.py  ea5c02356414_.py  ec53d07d3ffe_.py  f82780c88fbf_.py
